--- a/complete-intro-to-react-v9/padre-ginos/index.html
+++ b/complete-intro-to-react-v9/padre-ginos/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
+    <div id="modal"></div>
     <div id="root">not rendered</div>
     <script type="module" src="./src/App.jsx"></script>
   </body>
